package be.intecbrussel.shoppinglist.model;

public enum UserRole {
    ADMIN,
    NORMAL
}
