@startuml
class be.intecbrussel.shoppinglist.model.StoredFood {
- long id
~ Home home
~ Food food
~ StorageType storageType
~ int quantity
}

class be.intecbrussel.shoppinglist.model.Food {
- long id
- String name
- String remarks
}

abstract class be.intecbrussel.shoppinglist.model.AuditModel {
- Date createdAt
- Date updatedAt
}

class be.intecbrussel.shoppinglist.model.FoodOriginal {
- LocalDate bestBeforeEnd
- double original_ml_g
- LocalDate useBy
- double remaining_ml_g
+ LocalDate getUseBy()
+ void setOriginal_ml_g(double)
+ void setRemaining_ml_g(double)
}


class be.intecbrussel.shoppinglist.model.StorageType {
- long id
- String name
- String remarks
}

class be.intecbrussel.shoppinglist.model.Home {
- long id
- String name
}

class be.intecbrussel.shoppinglist.model.AppUser {
- long id
- String username
- String email
- UserRole userRole
- String passwordHashed
- Home home
}

enum be.intecbrussel.shoppinglist.model.UserRole {
+  ADMIN
+  NORMAL
}

be.intecbrussel.shoppinglist.model.AuditModel <|-- be.intecbrussel.shoppinglist.model.StoredFood
be.intecbrussel.shoppinglist.model.AuditModel <|-- be.intecbrussel.shoppinglist.model.Food
java.io.Serializable <|.. be.intecbrussel.shoppinglist.model.AuditModel
be.intecbrussel.shoppinglist.model.Food <|-- be.intecbrussel.shoppinglist.model.FoodOriginal
be.intecbrussel.shoppinglist.model.AuditModel <|-- be.intecbrussel.shoppinglist.model.StorageType
be.intecbrussel.shoppinglist.model.AuditModel <|-- be.intecbrussel.shoppinglist.model.Home
be.intecbrussel.shoppinglist.model.AuditModel <|-- be.intecbrussel.shoppinglist.model.AppUser

AppUser --> Home
AppUser --> UserRole
StoredFood --> Home
StoredFood --> Food
StoredFood --> StorageType

@enduml